--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link  rel="icon" type="image/svg+xml" href="https://www.german-hospital-directory.com/app/file/image/show/56621534b057af01_7cddda66-eb2b-47cc-9c98-555da19b91ee.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Dofdy-Book-a-Doctor</title>
   </head>
   <body>
     <div id="root"></div>
